<resources>
    <string name="app_name">Buttery</string>

    <string name="add_log_what_did_u_eat">What did you eat?</string>
    <string name="add_log_what_did_u_drink">What did you drink?</string>
    <string name="add_log_how_much_did_u_eat">How much did you eat?</string>
    <string name="add_log_how_much_did_u_drink">How much did you drink?</string>
    <string name="add_log_what_did_u_consume">What did you consume?</string>
    <string name="add_log_how_much_did_u_consume">How much did you consume?</string>
    <string name="add_log_how_many_did_u_eat">How many did you eat?</string>
    <string name="add_log_how_many_did_u_take">How many did you take?</string>
    <string name="add_log_meal_hint">Curry, omelette, etc</string>
    <string name="add_log_fat_hint">Coconut oil, butter, etc</string>
    <string name="add_log_liquid_hint">Soup, soda, etc</string>
    <string name="add_log_quantity_hint">1, 2, 3&#8230;</string>
    <string name="add_log_food">Food</string>
    <string name="add_log_water">Water</string>
    <string name="add_log_lime_lemon">Lime / Lemon</string>
    <string name="add_log_multivitamin">Multivitamin</string>
    <string name="add_log_fat">Fat</string>
    <string name="add_log_liquid">Liquid</string>
    <string name="add_log_save">Save</string>
    <string name="add_log_water_hint">In ml&#8230;</string>
    <string name="add_log_fat_hint_quantity">In mg&#8230;</string>
    <string name="add_log_weight">Weight</string>
    <string name="add_log_weight_title">What is your weight?</string>

    <string name="add_new_log">Add new log</string>
    <string name="log_added">Yay! Your %1$s log has been added.</string>

    <string name="add_log_food_error">Please add a valid food item.</string>
    <string name="add_log_fat_error">Please enter a valid fat source</string>
    <string name="add_log_number_quantity_error">Please enter a valid quantity</string>
    <string name="add_log_number_quantity_error_mg">Please enter a valid quantity in mg (milligrams)</string>
    <string name="add_log_number_quantity_error_ml">Please enter a valid quantity in ml (milliliters)</string>
    <string name="add_log_weight_invalid">Please enter your weight</string>

    <string name="log_desc_food">You ate %1$s.</string>
    <string name="log_desc_liquid">You drank %1$s.</string>
    <string name="log_desc_had">You had %1$.2f ml of %2$s.</string>
    <string name="log_desc_took">You took %1$.2f %2$s.</string>
    <string name="log_drank_water">You drank %1$.2f ml of water.</string>
    <string name="log_had_lime">You had %1$.2f lime / lemon.</string>
    <string name="log_had_multivitamin">You took %1$.2f unit(s) of multivitamins.</string>
    <string name="log_desc_weight">Your weight is %1$.2f %2$s</string>

    <string name="home_title_text">Hi %1$s, Here is your progress for %2$s!</string>
    <string name="home_no_logs_today">You have not added any logs for today. Get started by clicking on the + icon.</string>
    <string name="home_no_logs">You have not added any logs for %1$s.</string>

    <string name="menu_select_date">Select date</string>
    <string name="menu_send_feedback">Send feedback</string>
    <string name="menu_clear_all_logs">Clear all logs</string>

    <string name="str_today">today</string>
    <string name="str_goal_progress">Goal Progress</string>

    <string name="str_log_deleted">Your log has been deleted.</string>
    <string name="str_your_water_goal">Water goal (In ml)</string>
    <string name="str_your_fat_goal">Fat goal (In mg)</string>
    <string name="str_your_lime_goal">Lime goal</string>
    <string name="str_your_multivitamin_goal">Multivitamin goal</string>
    <string name="str_1_2">1, 2...</string>
    <string name="str_settings">Settings</string>

    <string name="settings_save">Save</string>
    <string name="settings_cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="str_log_weight">Log weight</string>
    <string name="str_open_log_weight">My weight</string>
    <string name="str_select_unit">Select unit</string>
    <string name="str_kilograms_kg">Kilograms (kgs)</string>
    <string name="str_pounds_lbs">Pounds (lbs)</string>

    <string name="str_weight_log_added">Yay! You have logged your weight.</string>
    <string name="str_your_weight">Your weight</string>
    <string name="str_no_weight_log">You have not logged your weight yet!</string>

    <string name="weight_details_activity_title">Weight Logs</string>
    <string name="str_kgs">Kgs</string>
    <string name="str_lbs">Lbs</string>

    <string name="str_sorry_no_mail">Sorry! you have no app to send out an email.</string>
    <string name="str_are_you_sure">Are you sure you want to delete all your data?</string>

    <string name="str_log_details_title">%1$s logs on %2$s</string>

    <string name="str_goal_reached">Goal reached</string>
    <string name="str_hello_welcome_to_buttery">Hello, Welcome to Buttery</string>
    <string name="str_buttery_introduction">Buttery is the most easy to use, diet program tracker.</string>
    <string name="str_it_helps_track_your">It helps track your Weight, Meals, Water intake, Fat Intake, Multivitamins and Citrus intake.</string>
    <string name="str_enter_your_name">Enter your name</string>
    <string name="str_let_s_get_started">Let\'s get started</string>

    <string name="str_please_enter_a_valid_name">Please enter a valid name</string>
    <string name="str_welcome_name">Welcome %1$s!</string>
    <string name="str_name">Name</string>
    <string name="str_profile_settings">Profile settings</string>
    <string name="str_goal_settings">Goal settings</string>
    <string name="str_weight_settings">Weight settings</string>
    <string name="str_faq">Frequently Asked Questions</string>
    <string name="str_how_weight">How to log and find my weight?</string>
    <string name="faq_my_weight">You can log and check your weight by opening the menu (click the 3 dot icon) and clicking the My Weight option.</string>
    <string name="faq_daily_goals_que">How to change my daily goals?</string>
    <string name="faq_goals_answer">All your daily goals for water, fat, multivitamins and citrus can be edited in the settings. You can get to settings by opening the menu (click the three dot icon) and clicking on settings.</string>
    <string name="faq_calendar_que">I am unable to find yesterday\'s logs. Are they lost?</string>
    <string name="faq_calendar_answer">All your daily logs are stored permanently on your device. You can view them by clicking on the calendar icon on the toolbar and selecting the date for which you want to view your logs.</string>
    <string name="faq_delete_que">I entered an incorrect log? How do I delete it?</string>
    <string name="faq_delete_answer">Don\'t worry! We all make mistakes. Find your incorrect entry and just swipe to the right or left. It is deleted.</string>
    <string name="menu_faq">FAQ</string>
    <string name="faq_more_questions">If you still have a question or need help with something. Write us your query using the Send Feedback option on the menu.</string>
    <string name="welcome_faq">PS: If you need help using Buttery check out the FAQs section on the menu or write us your query using the Send Feedback option.</string>
    <string name="str_crashlytics">Crashlytics</string>
    <string name="str_crashlytics_inc">Crashlytics, Inc.</string>
    <string name="str_kotlin">Kotlin</string>
    <string name="str_jetbrains_s_r_o">JetBrains s.r.o.</string>
    <string name="str_rxandroid">RxAndroid</string>
    <string name="the_rxandroid_authors">The RxAndroid authors</string>
    <string name="str_netflix_inc">Netflix, Inc.</string>
    <string name="str_rxjava">RxJava</string>
    <string name="str_icons">Icons</string>
    <string name="str_icons_freepik">Icon made by Freepik from www.flaticon.com</string>
    <string name="str_icons_monkik">Icon made by Monkik from www.flaticon.com</string>
    <string name="str_licenses">Licenses</string>
</resources>
