<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/menu_select_date"
        android:icon="@drawable/ic_action_calendar_day"
        app:showAsAction="ifRoom"
        android:id="@+id/menu_select_day_action"
        android:orderInCategory="1"/>

    <item android:title="@string/str_open_log_weight"
        app:showAsAction="never"
        android:id="@+id/menu_log_weight" />

    <item android:title="@string/str_settings"
        app:showAsAction="never"
        android:id="@+id/menu_settings"
        android:orderInCategory="2"/>

    <item android:title="@string/menu_send_feedback"
        app:showAsAction="never"
        android:id="@+id/menu_send_feedback"
        android:orderInCategory="3"/>

    <item android:title="@string/menu_clear_all_logs"
        app:showAsAction="never"
        android:id="@+id/menu_clear_all_logs"
        android:orderInCategory="4"/>

</menu>
