<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    tools:context=".home.HomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome to Buttery!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/multiple_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        fab:fab_labelStyle="@style/menu_labels_style">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_meal"
            fab:fab_colorNormal="@android:color/white"
            fab:fab_title="@string/add_log_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_icon="@drawable/meal"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_soup"
            fab:fab_colorNormal="@android:color/white"
            fab:fab_title="@string/add_log_liquid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_icon="@drawable/soup"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_fat"
            fab:fab_colorNormal="@android:color/white"
            fab:fab_title="@string/add_log_fat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_icon="@drawable/olive_oil"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_water"
            fab:fab_colorNormal="@android:color/white"
            fab:fab_title="@string/add_log_water"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_icon="@drawable/water"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_lime"
            fab:fab_colorNormal="@android:color/white"
            fab:fab_title="@string/add_log_lime_lemon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_icon="@drawable/lime"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_multi_vitamin"
            fab:fab_colorNormal="@android:color/white"
            fab:fab_title="@string/add_log_multivitamin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_icon="@drawable/proteins"/>

    </com.getbase.floatingactionbutton.FloatingActionsMenu>
</android.support.constraint.ConstraintLayout>
