<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/str_your_water_goal"
            android:layout_weight="0.7"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/water_goal_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:maxEms="5"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/str_your_fat_goal"
            android:layout_weight="0.7"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/fat_goal_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:maxEms="3"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/str_your_lime_goal"
            android:layout_weight="0.7"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/lime_goal_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/str_1_2"
            android:layout_weight="0.3"
            android:maxEms="3"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/str_your_multivitamin_goal"
            android:layout_weight="0.7"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/multivitamin_goal_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/str_1_2"
            android:layout_weight="0.3"
            android:maxEms="3"/>
    </LinearLayout>
</LinearLayout>
